# pretix-datatrans

./: .update-locales.sh  LICENSE  MANIFEST.in  Makefile  README.rst  pretixplugin.toml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: style.yml  tests.yml
pretix_datatrans/: __init__.py  apps.py  payment.py  signals.py  urls.py  views.py
pretix_datatrans/locale/de_Informal/LC_MESSAGES/: django.po
pretix_datatrans/templates/pretix_datatrans/: payment_confirm.html  payment_form.html
