[project]
name = "pretix-datatrans"
dynamic = ["version"]
description = "datatrans payment provider integration"
readme = "README.rst"
license = {text = "Apache"}
keywords = ["pretix"]
authors = [
    {name = "Michael Stapelberg", email = "michael+pretix@stapelberg.ch"},
]
maintainers = [
    {name = "Michael Stapelberg", email = "michael+pretix@stapelberg.ch"},
]

dependencies = [
]

[project.entry-points."pretix.plugin"]
pretix_datatrans = "pretix_datatrans:PretixPluginMeta"

[project.entry-points."distutils.commands"]
build = "pretix_plugin_build.build:CustomBuild"

[build-system]
requires = [
    "setuptools",
    "pretix-plugin-build",
]

[project.urls]
homepage = "https://github.com/stapelberg/pretix-datatrans"
repository = "https://github.com/stapelberg/pretix-datatrans"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "pretix_datatrans.__version__"}

[tool.setuptools.packages.find]
include = ["pretix*"]
namespaces = false
